MAINT-2872 Address issues with FHIR Validator 'errors' testgroup - add filter value check